@@ -45,6 +45,9 @@ class TestArchives (ArchiveTest):
         self.program = 'tar'
         self.archive_commands('t.tar.lzma')
 
+    # XXX even though clzip would support extracting .lz files, the
+    # file(1) --uncompress command does not use it for achive detection
+    @needs_program('lzip')
     @needs_codec('tar', 'lzip')
     def test_tar_lzip (self):
         self.program = 'tar'
@@ -307,6 +310,13 @@ class TestArchives (ArchiveTest):
     @needs_program('lzip')
     def test_lzip (self):
         self.program = 'lzip'
+        self.archive_test('t.txt.lz')
+        self.archive_extract('t.txt.lz')
+        self.archive_create('t.txt.lz', singlefile=True)
+
+    @needs_program('clzip')
+    def test_clzip (self):
+        self.program = 'clzip'
         self.archive_test('t.txt.lz')
         self.archive_extract('t.txt.lz')
         self.archive_create('t.txt.lz', singlefile=True)
